// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / CssGrid Conditionally hidden: WRONG way [hidden] 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left top top" "left content content";
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: auto 20px auto;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
}

.c2 {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: left;
}

.c4 {
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: content;
}

.c3 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      Left
    </div>
  </div>
  <div
    className="c1 c4"
  >
    <div
      className="c3"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms / CssGrid Conditionally hidden: good way [hidden] 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left top top" "left content content";
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: auto 20px auto;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
}

.c2 {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: left;
}

.c4 {
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: top;
}

.c5 {
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: content;
}

.c3 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      Left
    </div>
  </div>
  <div
    className="c1 c4"
  >
    <div
      className="c3"
    >
      This item is mounted and stays mounted no matter what. However, it‘d be hidden with css
    </div>
  </div>
  <div
    className="c1 c5"
  >
    <div
      className="c3"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms / CssGrid Conditionally hidden: good way [shown] 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left content content";
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: auto;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
}

.c2 {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: left;
}

.c4 {
  display: none;
  grid-area: none;
}

.c5 {
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: content;
}

.c3 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      Left
    </div>
  </div>
  <div
    className="c1 c4"
  >
    <div
      className="c3"
    >
      This item is mounted and stays mounted no matter what. However, it‘d be hidden with css
    </div>
  </div>
  <div
    className="c1 c5"
  >
    <div
      className="c3"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms / CssGrid CssGrid with custom gutter 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left top sidebar" "left content sidebar" "left content sidebar";
  grid-template-rows: 1fr 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 0px;
  display: -ms-grid;
  -ms-grid-rows: 1fr 0px 1fr 0px 1fr;
  -ms-grid-columns: 1fr 0px 1fr 0px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
}

.c2 {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 5;
  display: block;
  grid-area: left;
}

.c4 {
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: top;
}

.c5 {
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: content;
}

.c6 {
  -ms-grid-row: 1;
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 5;
  display: block;
  grid-area: sidebar;
}

.c3 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      Left
    </div>
  </div>
  <div
    className="c1 c4"
  >
    <div
      className="c3"
    >
      Top
    </div>
  </div>
  <div
    className="c1 c5"
  >
    <div
      className="c3"
    >
      Content
    </div>
  </div>
  <div
    className="c1 c6"
  >
    <div
      className="c3"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms / CssGrid CssGrid with custom templateColumns 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left top sidebar" "left content sidebar" "left content sidebar";
  grid-template-rows: 1fr 1fr 1fr;
  grid-template-columns: 25fr 50fr 25fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: 1fr 20px 1fr 20px 1fr;
  -ms-grid-columns: 25fr 20px 50fr 20px 25fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
}

.c2 {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 5;
  display: block;
  grid-area: left;
}

.c4 {
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: top;
}

.c5 {
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: content;
}

.c6 {
  -ms-grid-row: 1;
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 5;
  display: block;
  grid-area: sidebar;
}

.c3 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      Left
    </div>
  </div>
  <div
    className="c1 c4"
  >
    <div
      className="c3"
    >
      Top
    </div>
  </div>
  <div
    className="c1 c5"
  >
    <div
      className="c3"
    >
      Content
    </div>
  </div>
  <div
    className="c1 c6"
  >
    <div
      className="c3"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms / CssGrid CssGrid with different layouts for different screen sizes 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "top top" "left sidebar" "content sidebar";
  grid-template-rows: 1fr 1fr 1fr;
  grid-template-columns: 50fr 50fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: 1fr 20px 1fr 20px 1fr;
  -ms-grid-columns: 50fr 20px 50fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
}

.c2 {
  -ms-grid-row: 3;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: left;
}

.c4 {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: top;
}

.c5 {
  -ms-grid-row: 5;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: content;
}

.c6 {
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: sidebar;
}

.c3 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

@media (min-width:760px) {
  .c0 {
    grid-template-areas: "left top sidebar" "left content sidebar" "left content sidebar";
    grid-template-rows: auto 1fr 1fr;
    grid-template-columns: 25fr 50fr 25fr;
    grid-gap: 20px;
    display: -ms-grid;
    -ms-grid-rows: auto 20px 1fr 20px 1fr;
    -ms-grid-columns: 25fr 20px 50fr 20px 25fr;
  }
}

@media (min-width:760px) {
  .c2 {
    -ms-grid-row: 1;
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 5;
    display: block;
    grid-area: left;
  }
}

@media (min-width:760px) {
  .c4 {
    -ms-grid-row: 1;
    -ms-grid-column: 3;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 1;
    display: block;
    grid-area: top;
  }
}

@media (min-width:760px) {
  .c5 {
    -ms-grid-row: 3;
    -ms-grid-column: 3;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 3;
    display: block;
    grid-area: content;
  }
}

@media (min-width:760px) {
  .c6 {
    -ms-grid-row: 1;
    -ms-grid-column: 5;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 5;
    display: block;
    grid-area: sidebar;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      Left
    </div>
  </div>
  <div
    className="c1 c4"
  >
    <div
      className="c3"
    >
      Top
    </div>
  </div>
  <div
    className="c1 c5"
  >
    <div
      className="c3"
    >
      Content
    </div>
  </div>
  <div
    className="c1 c6"
  >
    <div
      className="c3"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms / CssGrid CssGrid with minmax() 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left top sidebar" "left content sidebar";
  grid-template-columns: 1fr minmax(30ch,2fr) 1fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: 1fr 20px 1fr;
  -ms-grid-columns: 1fr 20px minmax(30ch,2fr) 20px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
}

.c2 {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: left;
}

.c4 {
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: top;
}

.c5 {
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: content;
}

.c6 {
  -ms-grid-row: 1;
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: sidebar;
}

.c3 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      Left
    </div>
  </div>
  <div
    className="c1 c4"
  >
    <div
      className="c3"
    >
      Top
    </div>
  </div>
  <div
    className="c1 c5"
  >
    <div
      className="c3"
    >
      Content
    </div>
  </div>
  <div
    className="c1 c6"
  >
    <div
      className="c3"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms / CssGrid CssGrid with object as gutter and custom sized columns 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left top messages" "left top order" "left top sidebar" "left top sidebar" "left content sidebar";
  grid-template-rows: 1fr 1fr 1fr;
  grid-template-columns: 1fr 2fr 1fr;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 24px;
  display: -ms-grid;
  -ms-grid-rows: 1fr 24px 1fr 24px 1fr;
  -ms-grid-columns: 1fr 16px 2fr 16px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
}

.c2 {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 9;
  display: block;
  grid-area: left;
}

.c4 {
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 7;
  display: block;
  grid-area: top;
}

.c5 {
  -ms-grid-row: 9;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: content;
}

.c6 {
  -ms-grid-row: 1;
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: messages;
}

.c7 {
  -ms-grid-row: 3;
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: order;
}

.c8 {
  -ms-grid-row: 5;
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 5;
  display: block;
  grid-area: sidebar;
}

.c3 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      Left
    </div>
  </div>
  <div
    className="c1 c4"
  >
    <div
      className="c3"
    >
      Top
    </div>
  </div>
  <div
    className="c1 c5"
  >
    <div
      className="c3"
    >
      Content
    </div>
  </div>
  <div
    className="c1 c6"
  >
    <div
      className="c3"
    >
      Messages
    </div>
  </div>
  <div
    className="c1 c7"
  >
    <div
      className="c3"
    >
      Order
    </div>
  </div>
  <div
    className="c1 c8"
  >
    <div
      className="c3"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms / CssGrid Different gutter on different screen sizes 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left top content" "left top content";
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: auto 20px auto;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
}

.c2 {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: left;
}

.c4 {
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: top;
}

.c5 {
  -ms-grid-row: 1;
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: content;
}

.c6 {
  display: none;
  grid-area: none;
}

.c3 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

@media (min-width:976px) {
  .c0 {
    grid-template-areas: "left top content" "left top content";
    grid-template-rows: auto auto;
    grid-template-columns: 1fr;
    -webkit-column-gap: 0px;
    column-gap: 0px;
    row-gap: 0px;
    display: -ms-grid;
    -ms-grid-rows: auto 0px auto;
    -ms-grid-columns: 1fr;
  }
}

@media (min-width:976px) {
  .c2 {
    -ms-grid-row: 1;
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 3;
    display: block;
    grid-area: left;
  }
}

@media (min-width:976px) {
  .c4 {
    -ms-grid-row: 1;
    -ms-grid-column: 3;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 3;
    display: block;
    grid-area: top;
  }
}

@media (min-width:976px) {
  .c5 {
    -ms-grid-row: 1;
    -ms-grid-column: 5;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 3;
    display: block;
    grid-area: content;
  }
}

@media (min-width:976px) {
  .c6 {
    display: none;
    grid-area: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      Left
    </div>
  </div>
  <div
    className="c1 c4"
  >
    <div
      className="c3"
    >
      This item is mounted and stays mounted no matter what. However, it‘d be hidden with css
    </div>
  </div>
  <div
    className="c1 c5"
  >
    <div
      className="c3"
    >
      Content
    </div>
  </div>
  <div
    className="c1 c6"
  >
    <div
      className="c3"
    >
      something that doesn't exist
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms / CssGrid Items With Different Placements 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "alignStart alignCenter alignStretch alignEnd" "justifyStart justifyCenter justifyStretch justifyEnd" "placeStart placeCenter placeStretch placeEnd";
  grid-template-rows: 100px 100px 100px;
  grid-template-columns: 100px 100px 100px 100px;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: 100px 20px 100px 20px 100px;
  -ms-grid-columns: 100px 20px 100px 20px 100px 20px 100px;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -ms-grid-row-align: start;
}

.c4 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -ms-grid-row-align: center;
}

.c6 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -ms-grid-row-align: stretch;
}

.c8 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
  -ms-grid-row-align: end;
}

.c10 {
  box-sizing: border-box;
  min-width: 0;
  justify-self: start;
  -ms-grid-column-align: start;
}

.c12 {
  box-sizing: border-box;
  min-width: 0;
  justify-self: center;
  -ms-grid-column-align: center;
}

.c14 {
  box-sizing: border-box;
  min-width: 0;
  justify-self: stretch;
  -ms-grid-column-align: stretch;
}

.c16 {
  box-sizing: border-box;
  min-width: 0;
  justify-self: end;
  -ms-grid-column-align: end;
}

.c18 {
  box-sizing: border-box;
  min-width: 0;
  place-self: start;
  -ms-grid-row-align: start;
  -ms-grid-column-align: start;
}

.c20 {
  box-sizing: border-box;
  min-width: 0;
  place-self: center;
  -ms-grid-row-align: center;
  -ms-grid-column-align: center;
}

.c22 {
  box-sizing: border-box;
  min-width: 0;
  place-self: stretch;
  -ms-grid-row-align: stretch;
  -ms-grid-column-align: stretch;
}

.c24 {
  box-sizing: border-box;
  min-width: 0;
  place-self: end;
  -ms-grid-row-align: end;
  -ms-grid-column-align: end;
}

.c2 {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: alignStart;
}

.c5 {
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: alignCenter;
}

.c7 {
  -ms-grid-row: 1;
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: alignStretch;
}

.c9 {
  -ms-grid-row: 1;
  -ms-grid-column: 7;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: alignEnd;
}

.c11 {
  -ms-grid-row: 3;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: justifyStart;
}

.c13 {
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: justifyCenter;
}

.c15 {
  -ms-grid-row: 3;
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: justifyStretch;
}

.c17 {
  -ms-grid-row: 3;
  -ms-grid-column: 7;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: justifyEnd;
}

.c19 {
  -ms-grid-row: 5;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: placeStart;
}

.c21 {
  -ms-grid-row: 5;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: placeCenter;
}

.c23 {
  -ms-grid-row: 5;
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: placeStretch;
}

.c25 {
  -ms-grid-row: 5;
  -ms-grid-column: 7;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: placeEnd;
}

.c3 {
  background-color: #F5F5F5;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      left
    </div>
  </div>
  <div
    className="c4 c5"
  >
    <div
      className="c3"
    >
      center
    </div>
  </div>
  <div
    className="c6 c7"
  >
    <div
      className="c3"
    >
      stretch
    </div>
  </div>
  <div
    className="c8 c9"
  >
    <div
      className="c3"
    >
      end
    </div>
  </div>
  <div
    className="c10 c11"
  >
    <div
      className="c3"
    >
      left
    </div>
  </div>
  <div
    className="c12 c13"
  >
    <div
      className="c3"
    >
      center
    </div>
  </div>
  <div
    className="c14 c15"
  >
    <div
      className="c3"
    >
      stretch
    </div>
  </div>
  <div
    className="c16 c17"
  >
    <div
      className="c3"
    >
      end
    </div>
  </div>
  <div
    className="c18 c19"
  >
    <div
      className="c3"
    >
      left
    </div>
  </div>
  <div
    className="c20 c21"
  >
    <div
      className="c3"
    >
      center
    </div>
  </div>
  <div
    className="c22 c23"
  >
    <div
      className="c3"
    >
      stretch
    </div>
  </div>
  <div
    className="c24 c25"
  >
    <div
      className="c3"
    >
      end
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms / CssGrid Items with different placements 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left top top" "left content content";
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: auto 20px auto;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
}

.c2 {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: left;
}

.c4 {
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: top;
}

.c5 {
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: content;
}

.c3 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      Left
    </div>
  </div>
  <div
    className="c1 c4"
  >
    <div
      className="c3"
    >
      This item is mounted and stays mounted no matter what. However, it‘d be hidden with css
    </div>
  </div>
  <div
    className="c1 c5"
  >
    <div
      className="c3"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms / CssGrid Shown on md+, hidden on small screens 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left content content" "left content content";
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: auto 20px auto;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
}

.c2 {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: left;
}

.c4 {
  display: none;
  grid-area: none;
}

.c5 {
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: content;
}

.c6 {
  display: none;
  grid-area: none;
}

.c3 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

@media (min-width:976px) {
  .c0 {
    grid-template-areas: "left" "top" "content";
    grid-template-rows: auto auto;
    grid-template-columns: 1fr;
    grid-gap: 20px;
    display: -ms-grid;
    -ms-grid-rows: auto 20px auto;
    -ms-grid-columns: 1fr;
  }
}

@media (min-width:976px) {
  .c2 {
    -ms-grid-row: 1;
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 1;
    display: block;
    grid-area: left;
  }
}

@media (min-width:976px) {
  .c4 {
    -ms-grid-row: 3;
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 1;
    display: block;
    grid-area: top;
  }
}

@media (min-width:976px) {
  .c5 {
    -ms-grid-row: 5;
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 1;
    display: block;
    grid-area: content;
  }
}

@media (min-width:976px) {
  .c6 {
    display: none;
    grid-area: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      Left
    </div>
  </div>
  <div
    className="c1 c4"
  >
    <div
      className="c3"
    >
      This item is mounted and stays mounted no matter what. However, it‘d be hidden with css
    </div>
  </div>
  <div
    className="c1 c5"
  >
    <div
      className="c3"
    >
      Content
    </div>
  </div>
  <div
    className="c1 c6"
  >
    <div
      className="c3"
    >
      something that doesn't exist
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms / CssGrid Shown on small screen sizes, hidden on md+ 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left top top" "left content content";
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: auto 20px auto;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
}

.c2 {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: left;
}

.c4 {
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: top;
}

.c5 {
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: content;
}

.c6 {
  display: none;
  grid-area: none;
}

.c3 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

@media (min-width:976px) {
  .c0 {
    grid-template-areas: "left" "content";
    grid-template-rows: auto auto;
    grid-template-columns: 1fr;
    grid-gap: 20px;
    display: -ms-grid;
    -ms-grid-rows: auto 20px auto;
    -ms-grid-columns: 1fr;
  }
}

@media (min-width:976px) {
  .c2 {
    -ms-grid-row: 1;
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 1;
    display: block;
    grid-area: left;
  }
}

@media (min-width:976px) {
  .c4 {
    display: none;
    grid-area: none;
  }
}

@media (min-width:976px) {
  .c5 {
    -ms-grid-row: 3;
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 1;
    display: block;
    grid-area: content;
  }
}

@media (min-width:976px) {
  .c6 {
    display: none;
    grid-area: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      Left
    </div>
  </div>
  <div
    className="c1 c4"
  >
    <div
      className="c3"
    >
      This item is mounted and stays mounted no matter what. However, it‘d be hidden with css
    </div>
  </div>
  <div
    className="c1 c5"
  >
    <div
      className="c3"
    >
      Content
    </div>
  </div>
  <div
    className="c1 c6"
  >
    <div
      className="c3"
    >
      something that doesn't exist
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms / CssGrid Simple CssGrid 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "header header header" "menu content ads" "footer footer footer";
  grid-template-rows: 1fr 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: 1fr 20px 1fr 20px 1fr;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
}

.c2 {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 5;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: header;
}

.c4 {
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: content;
}

.c5 {
  -ms-grid-row: 3;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: menu;
}

.c6 {
  -ms-grid-row: 3;
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: ads;
}

.c7 {
  -ms-grid-row: 5;
  -ms-grid-column: 1;
  -ms-grid-column-span: 5;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: footer;
}

.c3 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      Header
    </div>
  </div>
  <div
    className="c1 c4"
  >
    <div
      className="c3"
    >
      Content
    </div>
  </div>
  <div
    className="c1 c5"
  >
    <div
      className="c3"
    >
      Menu
    </div>
  </div>
  <div
    className="c1 c6"
  >
    <div
      className="c3"
    >
      Ads
    </div>
  </div>
  <div
    className="c1 c7"
  >
    <div
      className="c3"
    >
      Footer
    </div>
  </div>
</div>
`;
